--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,8 @@ footer {
 }
 
 h2 { 
+
+    font-family: Georgia, 'Times New Roman', Times, serif;
     color: #4aaaa5;
     font-size: 32px;
     font-weight: bold;
@@ -80,12 +82,23 @@ h2 {
 
 .other-Text {
 
+
+    color: #636363;
     font-family: 'arial', 'Helvetica Neue', Helvetica, sans-serif;
     
 }
 
 article {
 
+    color: #636363;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+form {
+
+    color: #636363;
+    font-family: 'arial', 'Helvetica Neue', Helvetica, sans-serif;
     margin-top: 20px;
     margin-bottom: 20px;
 }
@@ -137,6 +150,46 @@ a:hover, a:active {
 
 }
 
+#userName {
+    margin-left: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 920px;
+    
+}
+
+#userEmail {
+    margin-left: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 920px;
+    
+}
+
+#message {
+    margin-left: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 920px;
+    height: 200px;
+    
+}
+
+.contactHeaders {
+
+    margin-left: 20px;
+}
+
+#submitButton {
+
+    margin-top: 10px;
+    margin-left: 20px;
+    background: #4aaaa5;
+    color: #ffffff;
+    padding: 10px 20px;
+
+
+}
 
 
 
